# My_Manipulator

./: .clang-format  .editorconfig  .gitignore  MOVEIT_CONFIG_GUIDE.md  PROJECT_STRUCTURE.md  README.md  TRAC_IK_INSTALL.md  fastdds_profile.xml  frames_2025-12-30_14.56.41.gv  install_deps.sh  install_trac_ik_deps.sh  requirements.txt  start_robot.sh  test_action_communication.py  test_ik.py  verify_action_communication.sh  verify_qos_config.sh
.cache/clangd/index/: marker_creation.cpp.1A2E6CBD9893E9AB.idx  marker_creation.h.BDBF8D07268E1407.idx
cursor_chat/: 2026-01-19_MTC规划问题修复.md  2026-01-21_FSM抓取状态机改造.md  2026-01-27_修复move_group无法获取关节状态问题.md  2026-01-28_joint_states_QoS计划落实.md  2026-01-28_夹爪验证与对齐无运动轨迹修复计划.md  2026-01-28_网页状态与夹爪闭合修复.md  2026-01-29_夹爪判断与MTC修复实施.md  2026-01-29_夹爪验证与无运动轨迹修复实施.md  2026-02-02_FakeSystem命名与夹爪抬升修复实施.md  2026-02-02_移除joint_state_broadcaster空参数日志.md  2026-02-02_移除夹爪容差.md  2026-02-03_UDP发不出去修复.md  2026-02-03_去除全零先到预备点功能.md  2026-02-03_去除地面障碍与视觉负z.md  2026-02-04_Joint4阶段间跳动修复.md  2026-02-04_启动前joint_states就绪门槛.md  2026-02-04_周报.md
install/: local_setup.sh  setup.sh
install/m5/share/m5/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/m5_configure/share/m5_configure/: .setup_assistant  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
scripts/: publish_cable_pose_test.py  run_test_flow.sh  verify_joint_states_qos.sh
simulator/: README.md  robot_simulator.py  start_simulator.sh
simulator/web/: index.html
src/m5/: CMakeLists.txt
src/m5/urdf/: m5_updated_from_csv.urdf
src/m5_bringup/: CMakeLists.txt  package.xml
src/m5_bringup/launch/: m5_grasp.launch.py  m5_planning.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
src/m5_configure/: CMakeLists.txt  package.xml
src/m5_configure/config/: kinematics.yaml  m5.srdf  m5.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/m5_configure/docs/: reachable_positions.csv  workspace_reachable_positions.md
src/m5_configure/launch/: demo.launch.py  demo_moveit.launch.py  m5_planning.launch.py  m5_planning_node.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/m5_configure/scripts/: publish_target_pose.py
src/m5_configure/src/: demo_moveit.cpp  joint_state_publisher_node.cpp  m5_planning.cpp  m5_planning_node.cpp
src/m5_control/: CMakeLists.txt  package.xml
src/m5_control/src/: joint_state_publisher_node.cpp
src/m5_grasp/: CMakeLists.txt  README.md  package.xml
src/m5_grasp/config/: cable_grasp.yaml
src/m5_grasp/include/m5_grasp/: trajectory_planner.hpp
src/m5_grasp/include/m5_grasp/execution/: cartesian_executor.hpp  gripper_controller.hpp  motion_executor.hpp
src/m5_grasp/include/m5_grasp/fsm/: grasp_fsm.hpp  target_tracker.hpp
src/m5_grasp/include/m5_grasp/hw/: gripper_interface.hpp
src/m5_grasp/include/m5_grasp/logging/: logger.hpp
src/m5_grasp/include/m5_grasp/mtc/: task_context.hpp  task_factory.hpp  task_runner.hpp
src/m5_grasp/include/m5_grasp/planning/: kinematics_utils.hpp  mtc_task_creator.hpp
src/m5_grasp/include/m5_grasp/utils/: grasp_types.hpp  parameter_manager.hpp  pose_utils.hpp  scene_manager.hpp  trajectory_planner.hpp
src/m5_grasp/include/m5_grasp/visualization/: web_visualizer.hpp
src/m5_grasp/scripts/: clean_logs.sh
src/m5_grasp/src/: m5_grasp.cpp  trajectory_planner.cpp
src/m5_grasp/src/execution/: cartesian_executor.cpp  gripper_controller.cpp  motion_executor.cpp
src/m5_grasp/src/fsm/: grasp_fsm.cpp  target_tracker.cpp
src/m5_grasp/src/logging/: logger.cpp
src/m5_grasp/src/mtc/: task_context.cpp  task_factory.cpp  task_runner.cpp
src/m5_grasp/src/planning/: kinematics_utils.cpp  mtc_task_creator.cpp
src/m5_grasp/src/utils/: parameter_manager.cpp  scene_manager.cpp  trajectory_planner.cpp
src/m5_grasp/src/visualization/: web_visualizer.cpp
src/m5_hardware/: CMakeLists.txt  m5_hardware_plugins.xml  package.xml
src/m5_hardware/include/m5_hardware/: m5_hardware_interface.hpp
src/m5_hardware/src/: m5_hardware_interface.cpp
src/m5_moveit_config/: CMakeLists.txt  package.xml
src/m5_moveit_config/config/: joint_limits.yaml  m5.ros2_control.xacro  m5.srdf  m5.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/m5_msgs/: CMakeLists.txt  package.xml
src/m5_planning/: CMakeLists.txt  package.xml
src/m5_tools/: CMakeLists.txt  package.xml
src/m5_tools/scripts/: publish_target_pose.py
src/msg/: Keypoints.msg
src/sealien_payload_bringup/: CMakeLists.txt  package.xml
src/sealien_payload_bringup/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  rviz.launch.py  sealien_payload_grasp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
src/sealien_payload_description/: CMakeLists.txt  package.xml
src/sealien_payload_grasp/: CMakeLists.txt  README.md  package.xml
src/sealien_payload_grasp/scripts/: clean_logs.sh
src/sealien_payload_grasp/src/: sealien_payload_grasp.cpp
src/sealien_payload_grasp/src/execution/: cartesian_executor.cpp  gripper_controller.cpp  motion_executor.cpp
src/sealien_payload_grasp/src/fsm/: grasp_fsm.cpp  target_tracker.cpp
src/sealien_payload_hardware/: CMakeLists.txt  package.xml  sealien_payload_hardware_plugins.xml
src/sealien_payload_hardware/include/sealien_payload_hardware/: sealien_payload_hardware_interface.hpp
src/sealien_payload_hardware/src/: sealien_payload_hardware_interface.cpp
src/sealien_payload_moveit_config/: CMakeLists.txt  package.xml
src/sealien_payload_moveit_config/config/: joint_limits.yaml  kinematics.yaml  m5.ros2_control.xacro  m5.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/sealien_payload_msgs/: CMakeLists.txt  package.xml
src/sealien_payload_msgs/msg/: CablePoseWithYaw.msg
(+42 files in other folders)
