<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m5_grasp</name>
  <version>0.1.0</version>
  <description>
    Cable grasping package for M5 robot using MoveIt
  </description>
  <maintainer email="huzy418@163.com">joey</maintainer>

  <license>BSD</license>

  <author email="huzy418@163.com">joey</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>m5_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>m5</exec_depend>
  <exec_depend>m5_hardware</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
