<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m5_moveit_config</name>
  <version>1.0.0</version>
  <description>MoveIt configuration package for M5 robot</description>
  <maintainer email="huzy418@163.com">joey</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>m5</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
