<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m5_planning</name>
  <version>1.0.0</version>
  <description>Motion planning node for M5 robot</description>
  <maintainer email="huzy418@163.com">joey</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>

  <exec_depend>m5_moveit_config</exec_depend>
  <exec_depend>m5_hardware</exec_depend>
  <exec_depend>m5</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
