<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sealien_payload_bringup</name>
  <version>1.0.0</version>
  <description>Sealien CtrlPilot Payload - Launch files for bringing up robot system</description>
  <maintainer email="huzy418@163.com">joey</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>sealien_payload_moveit_config</exec_depend>
  <exec_depend>sealien_payload_hardware</exec_depend>
  <exec_depend>sealien_payload_description</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
