<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sealien_payload_msgs</name>
  <version>0.1.0</version>
  <description>
    Sealien CtrlPilot Payload - Custom message types (e.g. CablePoseWithYaw)
  </description>
  <maintainer email="huzy418@163.com">joey</maintainer>

  <license>BSD</license>

  <author email="huzy418@163.com">joey</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
